SC_FOG: Fix tooltip during init placement, can't settle in fog; SOCBoardLarge +getFogHiddenHexes, set its keys at client too; SOCPlayer +hasPotentialSettlesInitInFog; SOCBoard, SOCBoardLarge +getAdjacentNodesToHex_arr; misc javadocs