@@ -1,6 +1,6 @@
 /**
  * Java Settlers - An online multiplayer version of the game Settlers of Catan
- * This file Copyright (C) 2011-2017 Jeremy D Monin <jeremy@nand.net>
+ * This file Copyright (C) 2011-2018 Jeremy D Monin <jeremy@nand.net>
  * Portions of this file Copyright (C) 2012 Paul Bilnoski <paul@bilnoski.net>
  *
  * This program is free software; you can redistribute it and/or
@@ -118,7 +118,8 @@ import soc.util.IntPair;
  *<TR><td> Node </td>
  *    <td><!-- Node adjac to hex -->
  *      {@link #getAdjacentNodeToHex(int, int)} <br>
- *      {@link #getAdjacentNodesToHex(int)}
+ *      {@link #getAdjacentNodesToHex(int)} <br>
+ *      {@link #getAdjacentNodesToHex_arr(int)}
  *    </td>
  *    <td><!-- Node adjac to edge -->
  *      {@link #getAdjacentNodeToEdge(int, int)} <br>
@@ -154,6 +155,7 @@ import soc.util.IntPair;
  *      {@link #getLandHexLayout()} <br>
  *      {@link #getLandHexCoords()} <br>
  *      {@link #getLandHexCoordsSet()} <br>
+ *      {@link #getFogHiddenHexes()} <br>
  *      {@link #isHexAtBoardMargin(int)} <br>
  *      {@link #isHexInLandAreas(int, int[])}
  *    </td>
@@ -448,7 +450,7 @@ public class SOCBoardLarge extends SOCBoard
      * For land hexes, the dice number on <tt>hexLayoutLg</tt>[r][c] is {@link #numberLayoutLg}[r][c].
      *<P>
      * For the set of all land hex coordinates, see {@link #landHexLayout}.
-     * Hexes obscured by {@link #FOG_HEX}, if any, are stored in {@link #fogHiddenHexes} (server only).
+     * Hexes obscured by {@link #FOG_HEX}, if any, are stored in {@link #fogHiddenHexes}.
      * Because of bit shifts there, please don't use the top 8 bits of <tt>hexLayoutLg</tt>.
      *<P>
      * Key to the hexLayoutLg[][] values:
@@ -535,8 +537,7 @@ public class SOCBoardLarge extends SOCBoard
     protected HashSet<Integer> legalRoadEdges;
 
     /**
-     * The legal set of water/coastline edge coordinates to build ships,
-     * based on {@link #hexLayoutLg}.
+     * The legal set of water/coastline edge coordinates to build ships, based on {@link #hexLayoutLg}.
      * Calculated in {@link #initLegalShipEdges()}, after {@link #hexLayoutLg} is filled by
      * {@code SOCBoardAtServer.makeNewBoard_fillNodesOnLandFromHexes(int[], int, int, int, boolean)}.
      *<P>
@@ -589,16 +590,17 @@ public class SOCBoardLarge extends SOCBoard
     private HashMap<Integer, Integer> specialEdges = new HashMap<Integer, Integer>();
 
     /**
-     * Actual hex types and dice numbers hidden under {@link #FOG_HEX}.
+     * Fog hex coordinates and (at server) actual hex types and dice numbers hidden under each {@link #FOG_HEX}.
      * Key is the hex coordinate; value is
      * <tt>({@link #hexLayoutLg}[coord] &lt;&lt; 8) | ({@link #numberLayoutLg}[coord] & 0xFF)</tt>.
+     * May be empty, never {@code null}.
      *<P>
-     * Filled at server only (SOCBoardAtServer.makeNewBoard_hideHexesInFog);
-     * the client doesn't know what's under the fog until hexes are revealed.
+     * Values are filled at server only (SOCBoardAtServer.makeNewBoard_hideHexesInFog);
+     * the client doesn't know what's under the fog until hexes are revealed by messages from server.
      * @see #revealFogHiddenHexPrep(int)
      * @see #revealFogHiddenHex(int, int, int)
      */
-    protected HashMap<Integer, Integer> fogHiddenHexes;
+    protected final HashMap<Integer, Integer> fogHiddenHexes;
 
     /**
      * For some scenarios, villages on the board. Null otherwise.
@@ -1004,8 +1006,8 @@ public class SOCBoardLarge extends SOCBoard
     }
 
     /**
-     * Reveal one land or water hex hidden by fog (call from SOCGame).
-     * Called by {@link SOCGame#revealFogHiddenHex(int, int, int)}
+     * Reveal one land or water hex hidden by fog. Called at server and clients,
+     * by {@link SOCGame#revealFogHiddenHex(int, int, int)}
      * before updating player legal ship edges.
      * @param hexCoord  Coordinate of the hex to reveal
      * @param hexType   Revealed hex type, same value as {@link #getHexTypeFromCoord(int)}
@@ -1026,6 +1028,7 @@ public class SOCBoardLarge extends SOCBoard
 
         hexLayoutLg[r][c] = hexType;
         numberLayoutLg[r][c] = diceNum;
+        fogHiddenHexes.remove(Integer.valueOf(hexCoord));  // needed at client, redundant at server
 
         if (hexType == WATER_HEX)
         {
@@ -1661,6 +1664,7 @@ public class SOCBoardLarge extends SOCBoard
      *
      * @return land hex coordinates, in no particular order, or null if none (all water).
      * @see #getLandHexCoordsSet()
+     * @see #getFogHiddenHexes()
      * @since 1.1.08
      */
     @Override
@@ -2051,7 +2055,7 @@ public class SOCBoardLarge extends SOCBoard
         // we don't have a list of land area hexes, only land area nodes.
         // To contain a hex, the land area must contain all 6 of its corner nodes.
 
-        final int[] hnodes = getAdjacentNodesToHex(hexCoord);
+        final int[] hnodes = getAdjacentNodesToHex_arr(hexCoord);
         final Integer hnode0 = Integer.valueOf(hnodes[0]);
         for (int a : las)
         {
@@ -2165,7 +2169,7 @@ public class SOCBoardLarge extends SOCBoard
     }
 
     /**
-     * Get the land hex layout, for sending from server to client.
+     * Build an array with the land hex layout, for sending from server to client.
      * Contains 3 int elements per land hex:
      * Coordinate, Hex type (resource, as in {@link #SHEEP_HEX}), Dice Number (0 for desert, fog, water).
      * 0 is also the Dice Number for land hexes without dice numbers, as seen in some scenario layouts
@@ -2194,7 +2198,7 @@ public class SOCBoardLarge extends SOCBoard
     }
 
     /**
-     * Set the land hex layout, sent from server to client.
+     * Set the land hex layout at client, sent from server.
      * Contains 3 int elements per land hex: Coordinate, Hex type (resource), Dice Number.
      * Clears landHexLayout, diceLayoutLg, numberLayoutLg,
      * nodesOnLand and legalRoadEdges before beginning.
@@ -2203,14 +2207,16 @@ public class SOCBoardLarge extends SOCBoard
      * {@link SOCGame#setPlayersLandHexCoordinates() game.setPlayersLandHexCoordinates()}.
      * After {@link #makeNewBoard(Map)} calculates the potential/legal settlements,
      * call each player's {@link SOCPlayer#setPotentialAndLegalSettlements(Collection, boolean, HashSet[])}.
-     * @param  lh  the layout, or null if no land hexes, from {@link #getLandHexLayout()}
+     * @param  lh  the layout, or null if no land hexes, built by server's call to {@link #getLandHexLayout()}
      */
     public void setLandHexLayout(final int[] lh)
     {
         // Clear the previous contents:
         landHexLayout.clear();
+        fogHiddenHexes.clear();
         nodesOnLand.clear();
         legalRoadEdges.clear();
+
         cachedGetLandHexCoords = null;
         for (int r = 0; r <= boardHeight; ++r)
         {
@@ -2222,17 +2228,33 @@ public class SOCBoardLarge extends SOCBoard
             return;  // all water for now
 
         int[] hcoords = new int[lh.length / 3];
+        final Integer ZERO_OBJ = Integer.valueOf(0);  // if needed for fogHiddenHexes
         for (int i = 0, ih = 0; i < lh.length; ++ih)
         {
             final int hexCoord = lh[i];  ++i;
             final int r = hexCoord >> 8,
                       c = hexCoord & 0xFF;
             hcoords[ih] = hexCoord;
-            landHexLayout.add(new Integer(hexCoord));
-            hexLayoutLg[r][c] = lh[i];  ++i;
+            landHexLayout.add(Integer.valueOf(hexCoord));
+            final int htype = lh[i];  ++i;
+            hexLayoutLg[r][c] = htype;
             numberLayoutLg[r][c] = lh[i];  ++i;
+            if (htype == FOG_HEX)
+                fogHiddenHexes.put(Integer.valueOf(hexCoord), ZERO_OBJ);
         }
         cachedGetLandHexCoords = hcoords;
+    }
+
+    /**
+     * Get the hex coordinates which are currently {@link #FOG_HEX}. Please treat as read-only.
+     * At server, also contains each one's hidden hex type and dice number.
+     * @return A map where key = hex coordinate, value = 0 or encoded hex type and dice number.
+     *     May be empty, will never be {@code null}.
+     * @see #getLandHexCoords()
+     */
+    public final HashMap<Integer, Integer> getFogHiddenHexes()
+    {
+        return fogHiddenHexes;
     }
 
     /**
@@ -2278,6 +2300,7 @@ public class SOCBoardLarge extends SOCBoard
      *     Each index holds the nodes for that land area number.
      *     Index 0 is unused.
      * @see #getNodeLandArea(int)
+     * @see #getFogHiddenHexes()
      */
     public HashSet<Integer>[] getLandAreasLegalNodes()
     {
@@ -2544,24 +2567,27 @@ public class SOCBoardLarge extends SOCBoard
     }
 
     /**
-     * The node coordinates adjacent to this hex in all 6 directions.
+     * An array of the node coordinates adjacent to this hex in all 6 directions.
      * (The 6 corners of this hex.)
      * Since all hexes have 6 nodes, all node coordinates are valid
      * if the hex coordinate is valid.
      *
      * @param hexCoord Coordinate of this hex; not checked for validity
-     * @return Node coordinate in all 6 directions,
+     * @return Array with node coordinate in all 6 directions,
      *           clockwise from top (northern point of hex):
-     *           0 is north, 1 is northeast, etc, 5 is northwest.
+     *           Index 0 is north, 1 is northeast, etc, 5 is northwest.
+     *           Never returns {@code null} or empty.
      * @since 2.0.00
+     * @see #getAdjacentNodesToHex(int)
      * @see #getAdjacentNodeToHex(int, int)
      */
     @Override
-    public int[] getAdjacentNodesToHex(final int hexCoord)
+    public int[] getAdjacentNodesToHex_arr(final int hexCoord)
     {
         int[] node = new int[6];
         for (int dir = 0; dir < 6; ++dir)
             node[dir] = hexCoord + A_NODE2HEX[dir][0] + A_NODE2HEX[dir][1];
+
         return node;
     }
 
